--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "highcharts-vue": "^1.3.5",
     "vue": "^2.5.2",
     "vue-highcharts": "^0.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
